# PauliTools

./: .gitignore  CMakeLists.txt  LICENSE.md  README.md
.github/workflows/: ci.yml
examples/: CMakeLists.txt  pauli_vector.cc  simple_dla_example.cc
include/cartan/: Pauli.h  PauliVector.h  algebra_types.h  dla_generator.h  involutions.h  models.h  symplectic.h
src/: CMakeLists.txt  Pauli.cc  PauliVector.cc  dla_generator.cc  involutions.cc  models.cc  symplectic.cc
test/: CMakeLists.txt  DLA.cc  Pauli.cc  PauliVector.cc  run.cc
